--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,47 @@
-@import "reset";
-
 body {
-	background: black;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
+
+#app {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: block;
+
+	.map {
+		width: 68%;
+		height: 87%;
+		position: absolute;
+		display: block;
+		top: 50%;
+		left: 5%;
+		transform: rotate(-2deg) translateY(-50%);
+		background-color: yellow;
+	}
+
+	#infos {
+		width: 31.81vw;
+		height: 92vh;
+		position: absolute;
+		top: -2%;
+		right: -2%;
+		transform: rotate(2deg);
+		background-color: blue;
+		z-index: 9;
+
+		h1 {
+			position: relative;
+			top: 2%;
+		}
+	}
 }
