--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,10 @@
+@import "reset";
+
 body {
 	overflow: hidden;
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 }
 
 canvas {
@@ -11,7 +13,6 @@ canvas {
 	left: 0;
 	z-index: 2;
 }
-
 #app {
 	position: relative;
 	width: 100%;
